<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_semibold"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/forgot_your_password"
                android:textColor="@color/neutrals_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_semibold"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/done"
                android:textColor="@color/hues_blue_celtic_blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvMobileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/mobile_number"
            android:textColor="@color/neutrals_black"
            android:textSize="12sp" />

        <com.lmt.global.base.view.custom.PhoneNumberInputView
            android:id="@+id/mobileInputContainer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/btnSendResetLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48dp"
            android:background="@drawable/bg_wallet_primary_button"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.5"
            android:paddingVertical="@dimen/_12dp"
            android:text="@string/send_reset_link"
            android:textColor="@color/neutrals_white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvUseEmailInstead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_24dp"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/use_email_instead"
            android:textColor="@color/hues_blue_celtic_blue"
            android:textSize="14sp" />

    </LinearLayout>
</layout>
